--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
 
-    <title>Gallidys</title>
+    <title>Nimbus</title>
 
     <style type="text/css">
 
@@ -32,9 +32,9 @@
     </style>
 
     <script src="gl-matrix.js"></script>
-    <script src="gallidys_objLibrary.js"></script>
-    <script src="gallidys_methodLibrary.js"></script>
-    <script src="gallidys.js"></script>
+    <script src="nimbus_objLibrary.js"></script>
+    <script src="nimbus_methodLibrary.js"></script>
+    <script src="nimbus.js"></script>
 </head>
 
     <body>
