Moved JS model descriptions out of nimbus_objLibrary.js to a separate file nimbus_modelsLibrary.js

--- a/html/index.html
+++ b/html/index.html
@@ -32,6 +32,7 @@
     </style>
 
     <script src="gl-matrix.js"></script>
+    <script src="nimbus_modelsLibrary.js"></script>
     <script src="nimbus_objLibrary.js"></script>
     <script src="nimbus_methodLibrary.js"></script>
     <script src="nimbus.js"></script>
