--- a/html/index.html
+++ b/html/index.html
@@ -34,6 +34,7 @@
     <script src="gl-matrix.js"></script>
     <script src="nimbus_modelsLibrary.js"></script>
     <script src="nimbus_objLibrary.js"></script>
+    <script src="nimbus_shaderPrograms.js"></script>
     <script src="nimbus_methodLibrary.js"></script>
     <script src="nimbus.js"></script>
 </head>
