--- a/html/index.html
+++ b/html/index.html
@@ -32,6 +32,7 @@
     </style>
 
     <script src="gl-matrix.js"></script>
+    <script src="nimbus_texturesLibrary.js"></script>
     <script src="nimbus_modelsLibrary.js"></script>
     <script src="nimbus_objLibrary.js"></script>
     <script src="nimbus_shaderPrograms.js"></script>
