--- a/volumetrics/volumetrics.html
+++ b/volumetrics/volumetrics.html
@@ -9,8 +9,8 @@
 
         canvas {
 
-            border-style: solid;
-            border-width: 1px;
+            width: 100%;
+            height: 100%;
         }
 
         html, body {
