--- a/volumetrics/volumetrics.html
+++ b/volumetrics/volumetrics.html
@@ -7,6 +7,12 @@
 
     <style type="text/css">
 
+        * {
+
+            padding: 0px;
+            margin: 0px;
+        }
+
         canvas {
 
             width: 100%;
