--- a/html/index.html
+++ b/html/index.html
@@ -30,6 +30,10 @@
             z-index: 1;
         }
     </style>
+    
+    <!-- Eruda plugin, uncomment for mobile debugging -->
+    <script src="https://cdn.jsdelivr.net/npm/eruda"></script>
+    <script>eruda.init(); console.log("eruda loaded");</script>
 
     <script src="gl-matrix.js"></script>
     <script src="nimbus_texturesLibrary.js"></script>
