Uncommented eruda tag for mobile debugging

--- a/html/index.html
+++ b/html/index.html
@@ -32,8 +32,8 @@
     </style>
     
     <!-- Eruda plugin, uncomment for mobile debugging -->
-    <!--<script src="https://cdn.jsdelivr.net/npm/eruda"></script>
-    <script>eruda.init(); console.log("eruda loaded");</script>-->
+    <script src="https://cdn.jsdelivr.net/npm/eruda"></script>
+    <script>eruda.init(); console.log("eruda loaded");</script>
 
     <script src="gl-matrix.js"></script>
     <script src="nimbus_texturesLibrary.js"></script>
