--- a/volumetrics/volumetrics.html
+++ b/volumetrics/volumetrics.html
@@ -36,5 +36,11 @@
     <body>
 
         <canvas id="canvas" width="500" height="500"></canvas>
+        <br>
+        <label for="farcolor">Select color in distance:</label>
+        <input type="color" id="farcolor" value="#ff80ff">
+        <br>
+        <label for="nearcolor">Select color close to camera:</label>
+        <input type="color" id="nearcolor" value="#330033">
     </body>
 </html>
