Added uniforms to shader representing near and far colors

--- a/volumetrics/volumetrics.html
+++ b/volumetrics/volumetrics.html
@@ -37,10 +37,10 @@
 
         <canvas id="canvas" width="500" height="500"></canvas>
         <br>
-        <label for="farcolor">Select color in distance:</label>
-        <input type="color" id="farcolor" value="#ff80ff">
+        <label for="farColorInput">Select color in distance:</label>
+        <input type="color" id="farColorInput" value="#ff80ff">
         <br>
-        <label for="nearcolor">Select color close to camera:</label>
-        <input type="color" id="nearcolor" value="#330033">
+        <label for="nearColorInput">Select color close to camera:</label>
+        <input type="color" id="nearColorInput" value="#330033">
     </body>
 </html>
