Removed current goo rendering method, switching to cloud volume rendering

--- a/volumetrics/volumetrics.html
+++ b/volumetrics/volumetrics.html
@@ -38,9 +38,9 @@
         <canvas id="canvas" width="500" height="500"></canvas>
         <br>
         <label for="farColorInput">Select color in distance:</label>
-        <input type="color" id="farColorInput" value="#ff80ff">
+        <input type="color" id="farColorInput" value="#000000">
         <br>
         <label for="nearColorInput">Select color close to camera:</label>
-        <input type="color" id="nearColorInput" value="#330033">
+        <input type="color" id="nearColorInput" value="#000000">
     </body>
 </html>
