Need to remove mouse controls

--- a/volumetrics/volumetrics.html
+++ b/volumetrics/volumetrics.html
@@ -42,5 +42,7 @@
         <br>
         <label for="nearColorInput">Select color close to camera:</label>
         <input type="color" id="nearColorInput" value="#000000">
+        <br>
+        <button type="button" id="renderButton">Render</button>
     </body>
 </html>
