Updated to start with default colors black and white

--- a/volumetrics/volumetrics.html
+++ b/volumetrics/volumetrics.html
@@ -41,7 +41,7 @@
         <input type="color" id="farColorInput" value="#000000">
         <br>
         <label for="nearColorInput">Select color close to camera:</label>
-        <input type="color" id="nearColorInput" value="#000000">
+        <input type="color" id="nearColorInput" value="#ffffff">
         <br>
         <button type="button" id="renderButton">Render</button>
     </body>
