Only one input currently, for background sky color

--- a/volumetrics/volumetrics.html
+++ b/volumetrics/volumetrics.html
@@ -37,10 +37,7 @@
 
         <canvas id="canvas" width="500" height="500"></canvas>
         <br>
-        <label for="farColorInput">Select color in distance:</label>
-        <input type="color" id="farColorInput" value="#000000">
-        <br>
-        <label for="nearColorInput">Select color close to camera:</label>
-        <input type="color" id="nearColorInput" value="#ffffff">
+        <label for="skyColorInput">Sky Color:</label>
+        <input type="color" id="skyColorInput" value="#000000">
     </body>
 </html>
