Updated sky color to a cool default color

--- a/volumetrics/volumetrics.html
+++ b/volumetrics/volumetrics.html
@@ -38,6 +38,6 @@
         <canvas id="canvas" width="500" height="500"></canvas>
         <br>
         <label for="skyColorInput">Sky Color:</label>
-        <input type="color" id="skyColorInput" value="#000000">
+        <input type="color" id="skyColorInput" value="#c3c0dc">
     </body>
 </html>
