--- a/volumetrics/volumetrics.html
+++ b/volumetrics/volumetrics.html
@@ -37,6 +37,15 @@
 
         <canvas id="canvas" width="500" height="500"></canvas>
         <br>
+        <label for="tminInput">tmin (0.0, inf):</label>
+        <input type="number" id="tminInput" value="0.0" min="0.0" step="0.001">
+        <br>
+        <label for="tmaxInput">tmax (0.0, inf):</label>
+        <input type="number" id="tmaxInput" value="2.0" min="0.0" step="0.001">
+        <br>
+        <label for="stepSizeInput">step size (0.0, inf):</label>
+        <input type="number" id="stepSizeInput" value="0.01" min="0.0" step="0.001">
+        <br>
         <label for="skyColorInput">Sky Color:</label>
         <input type="color" id="skyColorInput" value="#c3c0dc">
     </body>
