--- a/volumetrics/volumetrics.html
+++ b/volumetrics/volumetrics.html
@@ -37,6 +37,12 @@
 
         <canvas id="canvas" width="500" height="500"></canvas>
         <br>
+        <label for="noiseSlopeInput">noise slope (-inf, inf)</label>
+        <input type="number" id="noiseSlopeInput" value="1.0" step="0.001">
+        <br>
+        <label for="noiseOffsetInput">noise offset (-inf, inf)</label>
+        <input type="number" id="noiseOffsetInput" value="0.0" step="0.001">
+        <br>
         <label for="tminInput">tmin (0.0, inf):</label>
         <input type="number" id="tminInput" value="0.0" min="0.0" step="0.001">
         <br>
@@ -48,5 +54,14 @@
         <br>
         <label for="skyColorInput">Sky Color:</label>
         <input type="color" id="skyColorInput" value="#c3c0dc">
+        <br>
+        <label for="tsunMaxInput">max distance to march toward sun (0.0, inf):</label>
+        <input type="number" id="tsunMaxInput" value="0.3" min="0.0" step="0.001">
+        <br>
+        <label for="sunStepSizeInput">step size toward sun (0.0, inf)</label>
+        <input type="number" id="sunStepSizeInput" value="0.02" min="0.0" step="0.001">
+        <br>
+        <label for="lightAbsorptionInput">Light Absorption (Beer's Law) (0.0, inf):</label>
+        <input type="number" id="lightAbsorptionInput" value="6.0" min="0.0" step="0.001">
     </body>
 </html>
