--- a/volumetrics/volumetrics.html
+++ b/volumetrics/volumetrics.html
@@ -39,25 +39,25 @@
         <br>
         <label for="noiseSlopeInput">noise slope (-inf, inf)</label>
         <input type="number" id="noiseSlopeInput" value="10.0" step="0.01">
-        <br>
         <label for="noiseOffsetInput">noise offset (-inf, inf)</label>
         <input type="number" id="noiseOffsetInput" value="-2.0" step="0.01">
         <br>
         <label for="tminInput">tmin (0.0, inf):</label>
         <input type="number" id="tminInput" value="0.2" min="0.0" step="0.001">
-        <br>
         <label for="tmaxInput">tmax (0.0, inf):</label>
         <input type="number" id="tmaxInput" value="0.75" min="0.0" step="0.001">
-        <br>
         <label for="stepSizeInput">step size (0.0, inf):</label>
         <input type="number" id="stepSizeInput" value="0.001" min="0.0" step="0.001">
         <br>
         <label for="skyColorInput">Sky Color:</label>
         <input type="color" id="skyColorInput" value="#ffffff">
+        <label for="darkColorInput">Dark Cloud Color:</label>
+        <input type="color" id="darkColorInput" value="#000000">
+        <label for="lightColorInput">Light Cloud Color:</label>
+        <input type="color" id="lightColorInput" value="#ffffff">
         <br>
         <label for="tsunMaxInput">max distance to march toward sun (0.0, inf):</label>
         <input type="number" id="tsunMaxInput" value="0.005" min="0.0" step="0.001">
-        <br>
         <label for="sunStepSizeInput">step size toward sun (0.0, inf)</label>
         <input type="number" id="sunStepSizeInput" value="0.005" min="0.0" step="0.001">
         <br>
