--- a/volumetrics/volumetrics.html
+++ b/volumetrics/volumetrics.html
@@ -44,6 +44,8 @@
         <br>
         <label for="tminInput">tmin (0.0, inf):</label>
         <input type="number" id="tminInput" value="0.2" min="0.0" step="0.001">
+        <label for="densityFalloffInput">density falloff start (0.0, inf):</label>
+        <input type="number" id="densityFalloffInput" value="0.4" min="0.0" step="0.001">
         <label for="tmaxInput">tmax (0.0, inf):</label>
         <input type="number" id="tmaxInput" value="0.75" min="0.0" step="0.001">
         <label for="stepSizeInput">step size (0.0, inf):</label>
