--- a/volumetrics/volumetrics.html
+++ b/volumetrics/volumetrics.html
@@ -36,7 +36,7 @@
     <body>
 
         <canvas id="canvas" width="500" height="500"></canvas>
-        <br>
+        <button id="resetNoiseInput">Reset Noise</button>
         <label for="noiseSlopeInput">noise slope (-inf, inf)</label>
         <input type="number" id="noiseSlopeInput" value="10.0" step="0.01">
         <label for="noiseOffsetInput">noise offset (-inf, inf)</label>
