--- a/volumetrics/volumetrics.html
+++ b/volumetrics/volumetrics.html
@@ -37,6 +37,9 @@
 
         <canvas id="canvas" width="500" height="500"></canvas>
         <button id="resetNoiseInput">Reset Noise</button>
+        <label for="noiseScaleInput">noise scale (-inf, inf)</label>
+        <input type="number" id="noiseScaleInput" value="1.0" step="0.01">
+        <br>
         <label for="noiseSlopeInput">noise slope (-inf, inf)</label>
         <input type="number" id="noiseSlopeInput" value="10.0" step="0.01">
         <label for="noiseOffsetInput">noise offset (-inf, inf)</label>
