--- a/volumetrics/volumetrics.html
+++ b/volumetrics/volumetrics.html
@@ -37,12 +37,14 @@
 
         <canvas id="canvas" width="500" height="500"></canvas>
         <button id="resetNoiseInput">Reset Noise</button>
-        <label for="noiseScaleInput">noise scale (-inf, inf)</label>
+        <label for="noiseScaleInput">noise scale (-inf, inf):</label>
         <input type="number" id="noiseScaleInput" value="1.0" step="0.01">
+        <label for="noiseXInput">noise translation (x) (-inf, inf):</label>
+        <input type="number" id="noiseXInput" value="0.0" step="0.01">
         <br>
-        <label for="noiseSlopeInput">noise slope (-inf, inf)</label>
+        <label for="noiseSlopeInput">noise slope (-inf, inf):</label>
         <input type="number" id="noiseSlopeInput" value="10.0" step="0.01">
-        <label for="noiseOffsetInput">noise offset (-inf, inf)</label>
+        <label for="noiseOffsetInput">noise offset (-inf, inf):</label>
         <input type="number" id="noiseOffsetInput" value="-2.0" step="0.01">
         <br>
         <label for="tminInput">tmin (0.0, inf):</label>
