--- a/volumetrics/volumetrics.html
+++ b/volumetrics/volumetrics.html
@@ -40,7 +40,11 @@
         <label for="noiseScaleInput">noise scale (-inf, inf):</label>
         <input type="number" id="noiseScaleInput" value="1.0" step="0.01">
         <label for="noiseXInput">noise translation (x) (-inf, inf):</label>
-        <input type="number" id="noiseXInput" value="0.0" step="0.01">
+        <input type="number" id="noiseXInput" value="0.0" step="0.001">
+        <label for="noiseYInput">noise translation (y) (-inf, inf):</label>
+        <input type="number" id="noiseYInput" value="0.0" step="0.001">
+        <label for="noiseZInput">noise translation (z) (-inf, inf):</label>
+        <input type="number" id="noiseZInput" value="0.0" step="0.001">
         <br>
         <label for="noiseSlopeInput">noise slope (-inf, inf):</label>
         <input type="number" id="noiseSlopeInput" value="10.0" step="0.01">
