--- a/volumetrics/volumetrics.html
+++ b/volumetrics/volumetrics.html
@@ -78,5 +78,20 @@
         <input type="number" id="noise1SlopeInput" value="1.0" step="0.01">
         <label for="noise1OffsetInput">Noise1 offset (-inf, inf):</label>
         <input type="number" id="noise1OffsetInput" value="0.0" step="0.01">
+        <br>
+
+        <label for="noise2ScaleInput">Noise2 scale (-inf, inf):</label>
+        <input type="number" id="noise2ScaleInput" value="2.0" step="0.01">
+        <label for="noise2XInput">Noise2 translation (x) (-inf, inf):</label>
+        <input type="number" id="noise2XInput" value="0.0" step="0.001">
+        <label for="noise2YInput">Noise2 translation (y) (-inf, inf):</label>
+        <input type="number" id="noise2YInput" value="0.0" step="0.001">
+        <label for="noise2ZInput">Noise2 translation (z) (-inf, inf):</label>
+        <input type="number" id="noise2ZInput" value="0.0" step="0.001">
+        <br>
+        <label for="noise2SlopeInput">Noise2 slope (-inf, inf):</label>
+        <input type="number" id="noise2SlopeInput" value="0.5" step="0.01">
+        <label for="noise2OffsetInput">Noise1 offset (-inf, inf):</label>
+        <input type="number" id="noise2OffsetInput" value="0.0" step="0.01">
     </body>
 </html>
