--- a/volumetrics/volumetrics.html
+++ b/volumetrics/volumetrics.html
@@ -91,7 +91,23 @@
         <br>
         <label for="noise2SlopeInput">Noise2 slope (-inf, inf):</label>
         <input type="number" id="noise2SlopeInput" value="0.0" step="0.01">
-        <label for="noise2OffsetInput">Noise1 offset (-inf, inf):</label>
+        <label for="noise2OffsetInput">Noise2 offset (-inf, inf):</label>
         <input type="number" id="noise2OffsetInput" value="0.0" step="0.01">
+        <br>
+
+        <label for="noise3ScaleInput">Noise3 scale (-inf, inf):</label>
+        <input type="number" id="noise3ScaleInput" value="4.0" step="0.01">
+        <label for="noise3XInput">Noise3 translation (x) (-inf, inf):</label>
+        <input type="number" id="noise3XInput" value="0.0" step="0.001">
+        <label for="noise3YInput">Noise3 translation (y) (-inf, inf):</label>
+        <input type="number" id="noise3YInput" value="0.0" step="0.001">
+        <label for="noise3ZInput">Noise3 translation (z) (-inf, inf):</label>
+        <input type="number" id="noise3ZInput" value="0.0" step="0.001">
+        <br>
+        <label for="noise3SlopeInput">Noise3 slope (-inf, inf):</label>
+        <input type="number" id="noise3SlopeInput" value="0.0" step="0.01">
+        <label for="noise3OffsetInput">Noise3 offset (-inf, inf):</label>
+        <input type="number" id="noise3OffsetInput" value="0.0" step="0.01">
+        <br>
     </body>
 </html>
