--- a/volumetrics/volumetrics.html
+++ b/volumetrics/volumetrics.html
@@ -41,9 +41,9 @@
         <label for="tminInput">tmin (0.0, inf):</label>
         <input type="number" id="tminInput" value="0.2" min="0.0" step="0.001">
         <label for="densityFalloffInput">density falloff start (0.0, inf):</label>
-        <input type="number" id="densityFalloffInput" value="0.4" min="0.0" step="0.001">
+        <input type="number" id="densityFalloffInput" value="0.24" min="0.0" step="0.001">
         <label for="tmaxInput">tmax (0.0, inf):</label>
-        <input type="number" id="tmaxInput" value="0.75" min="0.0" step="0.001">
+        <input type="number" id="tmaxInput" value="0.25" min="0.0" step="0.001">
         <label for="stepSizeInput">step size (0.0, inf):</label>
         <input type="number" id="stepSizeInput" value="0.001" min="0.0" step="0.001">
         <br>
@@ -60,7 +60,7 @@
         <input type="number" id="sunStepSizeInput" value="0.005" min="0.0" step="0.001">
         <br>
         <label for="lightAbsorptionInput">Light Absorption (Beer's Law) (0.0, inf):</label>
-        <input type="number" id="lightAbsorptionInput" value="1.0" min="0.0" step="0.001">
+        <input type="number" id="lightAbsorptionInput" value="6.0" min="0.0" step="0.05">
         <br>
 
         <button id="resetNoiseInput">Reset Noise</button>
@@ -90,7 +90,7 @@
         <input type="number" id="noise2ZInput" value="0.0" step="0.001">
         <br>
         <label for="noise2SlopeInput">Noise2 slope (-inf, inf):</label>
-        <input type="number" id="noise2SlopeInput" value="0.0" step="0.01">
+        <input type="number" id="noise2SlopeInput" value="0.5" step="0.01">
         <label for="noise2OffsetInput">Noise2 offset (-inf, inf):</label>
         <input type="number" id="noise2OffsetInput" value="0.0" step="0.01">
         <br>
@@ -105,9 +105,39 @@
         <input type="number" id="noise3ZInput" value="0.0" step="0.001">
         <br>
         <label for="noise3SlopeInput">Noise3 slope (-inf, inf):</label>
-        <input type="number" id="noise3SlopeInput" value="0.0" step="0.01">
+        <input type="number" id="noise3SlopeInput" value="0.25" step="0.01">
         <label for="noise3OffsetInput">Noise3 offset (-inf, inf):</label>
         <input type="number" id="noise3OffsetInput" value="0.0" step="0.01">
+        <br>
+
+        <label for="noise4ScaleInput">Noise4 scale (-inf, inf):</label>
+        <input type="number" id="noise4ScaleInput" value="8.0" step="0.01">
+        <label for="noise4XInput">Noise4 translation (x) (-inf, inf):</label>
+        <input type="number" id="noise4XInput" value="0.0" step="0.001">
+        <label for="noise4YInput">Noise4 translation (y) (-inf, inf):</label>
+        <input type="number" id="noise4YInput" value="0.0" step="0.001">
+        <label for="noise4ZInput">Noise4 translation (z) (-inf, inf):</label>
+        <input type="number" id="noise4ZInput" value="0.0" step="0.001">
+        <br>
+        <label for="noise4SlopeInput">Noise4 slope (-inf, inf):</label>
+        <input type="number" id="noise4SlopeInput" value="0.125" step="0.01">
+        <label for="noise4OffsetInput">Noise4 offset (-inf, inf):</label>
+        <input type="number" id="noise4OffsetInput" value="0.0" step="0.01">
+        <br>
+
+        <label for="noise5ScaleInput">Noise5 scale (-inf, inf):</label>
+        <input type="number" id="noise5ScaleInput" value="16.0" step="0.01">
+        <label for="noise5XInput">Noise5 translation (x) (-inf, inf):</label>
+        <input type="number" id="noise5XInput" value="0.0" step="0.001">
+        <label for="noise5YInput">Noise5 translation (y) (-inf, inf):</label>
+        <input type="number" id="noise5YInput" value="0.0" step="0.001">
+        <label for="noise5ZInput">Noise5 translation (z) (-inf, inf):</label>
+        <input type="number" id="noise5ZInput" value="0.0" step="0.001">
+        <br>
+        <label for="noise5SlopeInput">Noise5 slope (-inf, inf):</label>
+        <input type="number" id="noise5SlopeInput" value="0.0625" step="0.01">
+        <label for="noise5OffsetInput">Noise5 offset (-inf, inf):</label>
+        <input type="number" id="noise5OffsetInput" value="0.0" step="0.01">
         <br>
     </body>
 </html>
