--- a/volumetrics/volumetrics.html
+++ b/volumetrics/volumetrics.html
@@ -41,9 +41,9 @@
         <label for="tminInput">tmin (0.0, inf):</label>
         <input type="number" id="tminInput" value="0.2" min="0.0" step="0.001">
         <label for="densityFalloffInput">density falloff start (0.0, inf):</label>
-        <input type="number" id="densityFalloffInput" value="0.24" min="0.0" step="0.001">
+        <input type="number" id="densityFalloffInput" value="0.25" min="0.0" step="0.001">
         <label for="tmaxInput">tmax (0.0, inf):</label>
-        <input type="number" id="tmaxInput" value="0.25" min="0.0" step="0.001">
+        <input type="number" id="tmaxInput" value="0.3" min="0.0" step="0.001">
         <label for="stepSizeInput">step size (0.0, inf):</label>
         <input type="number" id="stepSizeInput" value="0.001" min="0.0" step="0.001">
         <br>
@@ -53,6 +53,13 @@
         <input type="color" id="darkColorInput" value="#808080">
         <label for="lightColorInput">Light Cloud Color:</label>
         <input type="color" id="lightColorInput" value="#ffffff">
+        <br>
+        <label for="sunXInput">Sun Direction (X) (-1.0, 1.0):</label>
+        <input type="number" id="sunXInput" value="0.0" min="-1.0" max="1.0" step="0.01">
+        <label for="sunYInput">Sun Direction (Y) (-1.0, 1.0):</label>
+        <input type="number" id="sunYInput" value="-0.5" min="-1.0" max="1.0" step="0.01">
+        <label for="sunZInput">Sun Direction (Z) (-1.0, 1.0):</label>
+        <input type="number" id="sunZInput" value="0.5" min="-1.0" max="1.0" step="0.01">
         <br>
         <label for="tsunMaxInput">max distance to march toward sun (0.0, inf):</label>
         <input type="number" id="tsunMaxInput" value="0.005" min="0.0" step="0.001">
