--- a/volumetrics/volumetrics.html
+++ b/volumetrics/volumetrics.html
@@ -43,7 +43,7 @@
         <label for="densityFalloffInput">density falloff start (0.0, inf):</label>
         <input type="number" id="densityFalloffInput" value="0.25" min="0.0" step="0.001">
         <label for="tmaxInput">tmax (0.0, inf):</label>
-        <input type="number" id="tmaxInput" value="0.3" min="0.0" step="0.001">
+        <input type="number" id="tmaxInput" value="0.25" min="0.0" step="0.001">
         <label for="stepSizeInput">step size (0.0, inf):</label>
         <input type="number" id="stepSizeInput" value="0.001" min="0.0" step="0.001">
         <br>
@@ -57,9 +57,9 @@
         <label for="sunXInput">Sun Direction (X) (-1.0, 1.0):</label>
         <input type="number" id="sunXInput" value="0.0" min="-1.0" max="1.0" step="0.01">
         <label for="sunYInput">Sun Direction (Y) (-1.0, 1.0):</label>
-        <input type="number" id="sunYInput" value="-0.5" min="-1.0" max="1.0" step="0.01">
+        <input type="number" id="sunYInput" value="0.0" min="-1.0" max="1.0" step="0.01">
         <label for="sunZInput">Sun Direction (Z) (-1.0, 1.0):</label>
-        <input type="number" id="sunZInput" value="0.5" min="-1.0" max="1.0" step="0.01">
+        <input type="number" id="sunZInput" value="1.0" min="-1.0" max="1.0" step="0.01">
         <br>
         <label for="tsunMaxInput">max distance to march toward sun (0.0, inf):</label>
         <input type="number" id="tsunMaxInput" value="0.005" min="0.0" step="0.001">
@@ -68,6 +68,9 @@
         <br>
         <label for="lightAbsorptionInput">Light Absorption (Beer's Law) (0.0, inf):</label>
         <input type="number" id="lightAbsorptionInput" value="6.0" min="0.0" step="0.05">
+        <br>
+        <label for="fogInput">Fog Level (0.0, inf):</label>
+        <input type="number" id="fogInput" value="0.5" min="0.0" step="0.01">
         <br>
 
         <button id="resetNoiseInput">Reset Noise</button>
