Relabeled instances of noise1 to just noise

--- a/volumetrics/volumetrics.html
+++ b/volumetrics/volumetrics.html
@@ -75,19 +75,19 @@
 
         <button id="resetNoiseInput">Reset Noise</button>
         <br>
-        <label for="noise1ScaleInput">Noise1 scale (-inf, inf):</label>
-        <input type="number" id="noise1ScaleInput" value="1.0" step="0.01">
-        <label for="noise1XInput">Noise1 translation (x) (-inf, inf):</label>
-        <input type="number" id="noise1XInput" value="0.0" step="0.001">
-        <label for="noise1YInput">Noise1 translation (y) (-inf, inf):</label>
-        <input type="number" id="noise1YInput" value="0.0" step="0.001">
-        <label for="noise1ZInput">Noise1 translation (z) (-inf, inf):</label>
-        <input type="number" id="noise1ZInput" value="0.0" step="0.001">
+        <label for="noiseScaleInput">Noise scale (-inf, inf):</label>
+        <input type="number" id="noiseScaleInput" value="1.0" step="0.01">
+        <label for="noiseXInput">Noise translation (x) (-inf, inf):</label>
+        <input type="number" id="noiseXInput" value="0.0" step="0.001">
+        <label for="noiseYInput">Noise translation (y) (-inf, inf):</label>
+        <input type="number" id="noiseYInput" value="0.0" step="0.001">
+        <label for="noiseZInput">Noise translation (z) (-inf, inf):</label>
+        <input type="number" id="noiseZInput" value="0.0" step="0.001">
         <br>
-        <label for="noise1SlopeInput">Noise1 slope (-inf, inf):</label>
-        <input type="number" id="noise1SlopeInput" value="1.0" step="0.01">
-        <label for="noise1OffsetInput">Noise1 offset (-inf, inf):</label>
-        <input type="number" id="noise1OffsetInput" value="0.0" step="0.01">
+        <label for="noiseSlopeInput">Noise slope (-inf, inf):</label>
+        <input type="number" id="noiseSlopeInput" value="1.0" step="0.01">
+        <label for="noiseOffsetInput">Noise offset (-inf, inf):</label>
+        <input type="number" id="noiseOffsetInput" value="0.0" step="0.01">
         <br>
     </body>
 </html>
