Added inputs and event handlers for lightning1 settings in the javascript

--- a/volumetrics/volumetrics.html
+++ b/volumetrics/volumetrics.html
@@ -94,5 +94,21 @@
         <label for="noiseOffsetInput">Noise offset (-inf, inf):</label>
         <input type="number" id="noiseOffsetInput" value="0.0" step="0.01">
         <br>
+        <br>
+
+        <label for="lightning1ColorInput">Lightning 1 Color:</label>
+        <input type="color" id="lightning1ColorInput" value="#ffffff">
+        <label for="lightning1XInput">Lightning 1 source (x) (-inf, inf):</label>
+        <input type="number" id="lightning1XInput" value="0.0" step="0.01">
+        <label for="lightning1YInput">Lightning 1 source (y) (-inf, inf):</label>
+        <input type="number" id="lightning1YInput" value="0.0" step="0.01">
+        <label for="lightning1ZInput">Lightning 1 source (z) (-inf, inf):</label>
+        <input type="number" id="lightning1ZInput" value="-0.25" step="0.01">
+        <br>
+        
+        <label for="lightning1Falloff">Lightning 1 Falloff start (0.0, inf):</label>
+        <input type="number" id="lightning1Falloff" value="0.05" min="0.0" step="0.01">
+        <label for="lightning1End">Lightning 1 end (0.0, inf):</label>
+        <input type="number" id="lightning1End" value="0.1" min="0.0" step="0.01">
     </body>
 </html>
