--- a/volumetrics/volumetrics.html
+++ b/volumetrics/volumetrics.html
@@ -48,16 +48,16 @@
         <input type="number" id="stepSizeInput" value="0.001" min="0.0" step="0.001">
         <br>
         <label for="skyColorInput">Sky Color:</label>
-        <input type="color" id="skyColorInput" value="#454545">
+        <input type="color" id="skyColorInput" value="#000000">
         <label for="darkColorInput">Dark Cloud Color:</label>
-        <input type="color" id="darkColorInput" value="#454545">
+        <input type="color" id="darkColorInput" value="#000000">
         <label for="lightColorInput">Light Cloud Color:</label>
-        <input type="color" id="lightColorInput" value="#ffffff">
+        <input type="color" id="lightColorInput" value="#383862">
         <br>
         <label for="sunColorInput">Sun Color:</label>
         <input type="color" id="sunColorInput" value="#ffffff">
         <label for="sunIntensityInput">Sun Intensity (inversed) (0.001, inf):</label>
-        <input type="number" id="sunIntensityInput" value="4.0" min="0.001" step="0.1">
+        <input type="number" id="sunIntensityInput" value="1000.0" min="0.001" step="0.1">
         <br>
         <label for="sunXInput">Sun Direction (X) (-1.0, 1.0):</label>
         <input type="number" id="sunXInput" value="0.0" min="-1.0" max="1.0" step="0.01">
