Added input to select which lightning stage is being displayed

--- a/volumetrics/volumetrics.html
+++ b/volumetrics/volumetrics.html
@@ -96,6 +96,10 @@
         <br>
         <br>
 
+        <label for="displayStageInput">Select lighting stage to display (0.0, 4.0):</label>
+        <input type="number" id="displayStageInput" value="0.0" min="0.0" max="4.0" step="1.0">
+        <br>
+
         <label for="lightning1ColorInput">Lightning 1 Color:</label>
         <input type="color" id="lightning1ColorInput" value="#ffffff">
         <label for="lightning1XInput">Lightning 1 source (x) (-inf, inf):</label>
