--- a/volumetrics/volumetrics.html
+++ b/volumetrics/volumetrics.html
@@ -100,6 +100,9 @@
         <input type="number" id="displayStageInput" value="0.0" min="0.0" max="4.0" step="1.0">
         <br>
 
+        <label for="lightning1MixtureInput">Lightning 1 Mixture:</label>
+        <input type="range" value = "1.0" min ="0.0" max="1.0" step="0.01">
+        <br>
         <label for="lightning1ColorInput">Lightning 1 Color:</label>
         <input type="color" id="lightning1ColorInput" value="#ffffff">
         <label for="lightning1XInput">Lightning 1 source (x) (-inf, inf):</label>
@@ -111,8 +114,8 @@
         <br>
         
         <label for="lightning1Falloff">Lightning 1 Falloff start (0.0, inf):</label>
-        <input type="number" id="lightning1Falloff" value="0.05" min="0.0" step="0.01">
+        <input type="number" id="lightning1Falloff" value="0.0" min="0.0" step="0.01">
         <label for="lightning1End">Lightning 1 end (0.0, inf):</label>
-        <input type="number" id="lightning1End" value="0.1" min="0.0" step="0.01">
+        <input type="number" id="lightning1End" value="0.3" min="0.0" step="0.01">
     </body>
 </html>
