Implemented the slider event listener for the lightning 1 mixture

--- a/volumetrics/volumetrics.html
+++ b/volumetrics/volumetrics.html
@@ -101,7 +101,7 @@
         <br>
 
         <label for="lightning1MixtureInput">Lightning 1 Mixture:</label>
-        <input type="range" value = "1.0" min ="0.0" max="1.0" step="0.01">
+        <input type="range" id="lightning1MixtureInput" value = "1.0" min ="0.0" max="1.0" step="0.01">
         <br>
         <label for="lightning1ColorInput">Lightning 1 Color:</label>
         <input type="color" id="lightning1ColorInput" value="#ffffff">
