--- a/volumetrics/volumetrics.html
+++ b/volumetrics/volumetrics.html
@@ -41,6 +41,9 @@
         <label for="lightning1MixtureInput">Lightning 1 Mixture:</label>
         <input type="range" id="lightning1MixtureInput" value = "0.0" min ="0.0" max="1.0" step="0.01">
         <br>
+        <label for="lightning2MixtureInput">Lightning 2 Mixture:</label>
+        <input type="range" id="lightning2MixtureInput" value = "0.0" min ="0.0" max="1.0" step="0.01">
+        <br>
 
         <br>
         <label for="tminInput">tmin (0.0, inf):</label>
@@ -119,5 +122,22 @@
         <input type="number" id="lightning1Falloff" value="0.1" min="0.0" step="0.01">
         <label for="lightning1End">Lightning 1 end (0.0, inf):</label>
         <input type="number" id="lightning1End" value="0.3" min="0.0" step="0.01">
+        <br>
+
+        <label for="lightning2ColorInput">Lightning 2 Color:</label>
+        <input type="color" id="lightning2ColorInput" value="#ffffff">
+        <label for="lightning2XInput">Lightning 2 source (x) (-inf, inf):</label>
+        <input type="number" id="lightning2XInput" value="0.2" step="0.01">
+        <label for="lightning2YInput">Lightning 2 source (y) (-inf, inf):</label>
+        <input type="number" id="lightning2YInput" value="0.0" step="0.01">
+        <label for="lightning2ZInput">Lightning 2 source (z) (-inf, inf):</label>
+        <input type="number" id="lightning2ZInput" value="0.0" step="0.01">
+        <br>
+        
+        <label for="lightning2Falloff">Lightning 2 Falloff start (0.0, inf):</label>
+        <input type="number" id="lightning2Falloff" value="0.1" min="0.0" step="0.01">
+        <label for="lightning2End">Lightning 2 end (0.0, inf):</label>
+        <input type="number" id="lightning2End" value="0.3" min="0.0" step="0.01">
+        <br>
     </body>
 </html>
