--- a/volumetrics/volumetrics.html
+++ b/volumetrics/volumetrics.html
@@ -38,14 +38,6 @@
         <canvas id="canvas" width="500" height="500"></canvas>
 
         <br>
-        <label for="lightning1MixtureInput">Lightning 1 Mixture:</label>
-        <input type="range" id="lightning1MixtureInput" value = "0.0" min ="0.0" max="1.0" step="0.01">
-        <br>
-        <label for="lightning2MixtureInput">Lightning 2 Mixture:</label>
-        <input type="range" id="lightning2MixtureInput" value = "0.0" min ="0.0" max="1.0" step="0.01">
-        <br>
-
-        <br>
         <label for="tminInput">tmin (0.0, inf):</label>
         <input type="number" id="tminInput" value="0.2" min="0.0" step="0.001">
         <label for="densityFalloffInput">density falloff start (0.0, inf):</label>
@@ -138,6 +130,22 @@
         <input type="number" id="lightning2Falloff" value="0.1" min="0.0" step="0.01">
         <label for="lightning2End">Lightning 2 end (0.0, inf):</label>
         <input type="number" id="lightning2End" value="0.3" min="0.0" step="0.01">
+        <br>
+
+        <label for="lightning3ColorInput">Lightning 3 Color:</label>
+        <input type="color" id="lightning3ColorInput" value="#ffffff">
+        <label for="lightning3XInput">Lightning 3 source (x) (-inf, inf):</label>
+        <input type="number" id="lightning3XInput" value="0.0" step="0.01">
+        <label for="lightning3YInput">Lightning 3 source (y) (-inf, inf):</label>
+        <input type="number" id="lightning3YInput" value="0.0" step="0.01">
+        <label for="lightning3ZInput">Lightning 3 source (z) (-inf, inf):</label>
+        <input type="number" id="lightning3ZInput" value="0.2" step="0.01">
+        <br>
+        
+        <label for="lightning3Falloff">Lightning 3 Falloff start (0.0, inf):</label>
+        <input type="number" id="lightning3Falloff" value="0.1" min="0.0" step="0.01">
+        <label for="lightning3End">Lightning 3 end (0.0, inf):</label>
+        <input type="number" id="lightning3End" value="0.3" min="0.0" step="0.01">
         <br>
     </body>
 </html>
